[gd_scene load_steps=11 format=3 uid="uid://bpf16o8hdvbji"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_nkfmb"]
[ext_resource type="PackedScene" uid="uid://da2qgxxwwitl6" path="res://addons/godot-xr-tools/objects/highlight/highlight_ring.tscn" id="2_hi23u"]
[ext_resource type="Script" path="res://components/pickable_image.gd" id="2_yt8ey"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="4_7h144"]
[ext_resource type="PackedScene" uid="uid://xkc7ruxol8pr" path="res://components/rating_beauty.tscn" id="5_ydeow"]
[ext_resource type="PackedScene" uid="uid://d2iwwfr4gegul" path="res://components/rating_ai.tscn" id="6_kenc6"]
[ext_resource type="PackedScene" uid="uid://bx2ulcwmp4yeo" path="res://components/rating_tablet.tscn" id="7_7pvwj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a08l6"]
size = Vector3(0.25, 0.25, 0.01)

[sub_resource type="BoxMesh" id="BoxMesh_06w32"]
size = Vector3(0.35, 0.35, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_12c3v"]
albedo_color = Color(0.099986, 0.099986, 0.099986, 1)

[node name="PickableImage" instance=ExtResource("1_nkfmb")]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0, 0)
axis_lock_angular_x = true
axis_lock_angular_z = true
gravity_scale = 0.0
linear_damp = 15.0
angular_damp = 15.0
script = ExtResource("2_yt8ey")
ranged_grab_method = 0

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("BoxShape3D_a08l6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." index="1"]
mesh = SubResource("BoxMesh_06w32")
surface_material_override/0 = SubResource("StandardMaterial3D_12c3v")

[node name="Sprite3D" type="Sprite3D" parent="MeshInstance3D" index="0"]
transform = Transform3D(0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0, 0, 0.006)

[node name="HighlightRing" parent="." index="2" instance=ExtResource("2_hi23u")]

[node name="LabelStart" type="Label3D" parent="." index="3"]
transform = Transform3D(0.05, 0, -3.17865e-09, 0, 0.05, 0, 3.17865e-09, 0, 0.05, 0.176122, 0.0847005, 0.0151826)
visible = false
text = "start
"

[node name="LabelCurrent" type="Label3D" parent="." index="4"]
transform = Transform3D(0.1, 0, 2.38418e-08, 0, 0.1, 0, -2.38418e-08, 0, 0.1, -0.00689897, 0.00102733, 0.0272138)
text = "CURRENT:
0
0
0"

[node name="LabelShift" type="Label3D" parent="." index="5"]
transform = Transform3D(0.045, 0, 1.07288e-08, 0, 0.045, 0, -1.07288e-08, 0, 0.045, 0.279727, 0.0733653, 0.0110619)
visible = false
text = "SHIFT:
0
0
0"

[node name="Viewport2Din3D" parent="." index="6" instance=ExtResource("4_7h144")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00849845, 0.107407, 0.00710803)
screen_size = Vector2(0.33, 0.145)
collision_layer = 5242880
scene = ExtResource("5_ydeow")
viewport_size = Vector2(500, 200)
unshaded = true

[node name="Viewport2Din3D2" parent="." index="7" instance=ExtResource("4_7h144")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00849845, -0.220722, 0.00710803)
screen_size = Vector2(0.33, 0.145)
collision_layer = 5242880
scene = ExtResource("6_kenc6")
viewport_size = Vector2(500, 200)
unshaded = true

[node name="Colliding" type="Label3D" parent="." index="8"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.260846, 0, -3.93866e-08)
text = "colliding"

[node name="RatingTablet" parent="." index="9" instance=ExtResource("7_7pvwj")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45716, 0, 6.90293e-08)

[node name="Viewport2Din3D" parent="RatingTablet" index="0"]
scene_properties_keys = PackedStringArray("combined_ratings.gd")

[connection signal="highlight_updated" from="." to="." method="_on_highlight_updated"]
[connection signal="released" from="." to="." method="_on_released"]

[editable path="RatingTablet"]
